Listing custom actions visible by student. Needs correction state dialog.

--- a/src/main/webapp/WEB-INF/app/resources/styles/sass/views/submission/_submission-dialog.scss
+++ b/src/main/webapp/WEB-INF/app/resources/styles/sass/views/submission/_submission-dialog.scss
@@ -1,4 +1,9 @@
-submissiondialog div.dialog {
+submissiondialog div.dialog {}
+@media (max-width: 1540px) {
+  submissiondialog div.dialog {}
+}
+
+submissiondialog div.dialog.state {
   position: fixed;
   width: 300px;
   bottom: 6%;
@@ -6,15 +11,12 @@ submissiondialog div.dialog {
   padding: 10px 20px;
   margin-bottom: 18px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  background-color: #fcf8e3;
-  border: 1px solid #fbeed5;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  color: #584521;
 }
 @media (max-width: 1540px) {
-  submissiondialog div.dialog {
+  submissiondialog div.dialog.state {
     opacity: 0.9;
     position: fixed;
     bottom: 4%;
@@ -26,24 +28,86 @@ submissiondialog div.dialog {
   }
 }
 
-submissiondialog div.dialog span.dialog-close {
+submissiondialog div.dialog.state.immutable {
+  background-color: #fcf8e3;
+  border: 1px solid #fbeed5;
+  color: #584521;
+}
+
+submissiondialog div.dialog.state.needs-correction {
+  background-color: #f2dede;
+  border: 1px solid #eed3d7;
+  color: #752e2d;
+}
+
+.needs-correction-link {
+  color: #666666;
+  text-decoration: none;
+}
+
+.needs-correction-action {
+  padding: 17px 20px 18px;
+  margin-top: 18px;
+  margin-bottom: 18px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #e5e5e5;
+}
+
+submissiondialog div.dialog.actions {
+  position: fixed;
+  width: 300px;
+  bottom: 6%;
+  left: 2%;
+  padding: 10px 20px;
+  margin-bottom: 18px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  background-color: #d9edf7;
+  border: 1px solid #bce8f1;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  color: #31708f;
+}
+@media (max-width: 1540px) {
+  submissiondialog div.dialog.actions {
+    width: 50%;
+    opacity: 0.9;
+    position: relative;
+    left: 50%;
+    width: 50%;
+    margin-left: -26%;
+    padding: 10px 20px;
+    z-index: 1;
+  }
+}
+
+span.dialog-close {
   float: right;
 }
 
-submissiondialog div.dialog h4.dialog-header {
+h4.dialog-header {
   font-weight: bold;
   margin-bottom: 0;
 }
 
-submissiondialog div.dialog span.submission-state {
+span.submission-state {
   font-weight: bold;
 }
 
+li.action-list-element {
+  margin-right: 15px;
+  margin-bottom: 5px;
+}
+
+ul.dialog-actions-list {
+  list-style-type: none;
+}
+
 .dialog-content {
-  -webkit-transition: max-height 0.55s ease-in-out, opacity 0.25s ease-in-out;
-  -moz-transition: max-height 0.55s ease-in-out, opacity 0.25s ease-in-out;
-  -o-transition: max-height 0.55s ease-in-out, opacity 0.25s ease-in-out;
-  transition: max-height 0.55s ease-in-out, opacity 0.25s ease-in-out;
+  -webkit-transition: max-height 0.45s ease-in-out, opacity 0.25s ease-in-out;
+  -moz-transition: max-height 0.45s ease-in-out, opacity 0.25s ease-in-out;
+  -o-transition: max-height 0.45s ease-in-out, opacity 0.25s ease-in-out;
+  transition: max-height 0.45s ease-in-out, opacity 0.25s ease-in-out;
   overflow: hidden;
   margin-top: 10px;
 }
